[package]
name = "portal"
version = "1.0.2"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["full-text-search", "search", "search-service", "portal"]
description = "Full Text Search Web Service"
repository = "https://github.com/apibillme/portal"
categories = ["web-programming::http-server", "database-implementations", "authentication", "algorithms"]
readme = "README.md"

[dependencies]
serde_json = "1"
tide = "0.16.0"
async-std = { version = "1.9", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
json = "0.12"
rocksdb = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
go-flag = "0.1"
lazy_static = "1.4"
anyhow = "1"
rmp-serde = "0.15"
driftwood = "0.0.6"
http-types = "2"
tide-rustls = "0.3"
tide-acme = "0.1.0"
sonic-channel = { version = "0.4", features = ["ingest"] }
surf = "2.2"
